<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="233dp"
    android:layout_margin="10dp"
    android:background="@drawable/background_with_radius"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:id="@+id/layout_viewers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_viewers"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            style="@style/TextViewStyle"
            android:text="@string/text_viewers"
            android:textColor="@color/primary_green" />

        <ImageButton
            android:id="@+id/button_favorite"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="120dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/favorite"
            android:src="@drawable/ic_heart" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_job_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_job_title"
        android:fontFamily="@font/sf_pro_regular"
        android:textColor="#fff"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_location"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        style="@style/TextViewStyle"
        android:layout_marginTop="10dp"
        android:text="@string/text_location" />

    <LinearLayout
        android:id="@+id/layout_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_company"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/TextViewStyle"
            android:text="@string/text_company" />

        <ImageButton
            android:id="@+id/button_company_verified"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/location"
            android:src="@drawable/ic_check_mark" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_experience"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/button_experience_icon"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/experience"
            android:src="@drawable/ic_experience" />

        <TextView
            android:id="@+id/text_experience"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            style="@style/TextViewStyle"
            android:text="@string/text_experience" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_published_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        style="@style/TextViewStyle"
        android:text="@string/text_published_date" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_apply"
        android:background="@drawable/button_reply_background"
        android:text="@string/button_apply"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_width="match_parent"
        android:layout_height="32dp" />

</LinearLayout>
